# ChangeLog for dev-python/notebook
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*notebook-4.0.1 (01 Sep 2015)

  01 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> +notebook-4.0.1.ebuild:
  dev-python/notebook: Bring back 4.0.1

  01 Sep 2015; Sean Vig <sean.v.775@gmail.com> notebook-9999.ebuild:
  dev-python/notebook: Use system mathjax

*notebook-4.0.4 (01 Sep 2015)

  01 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> +notebook-4.0.4.ebuild,
  -notebook-4.0.1.ebuild:
  dev-python/notebook: Version bump; Remove old

  27 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> notebook-9999.ebuild:
  dev-python/notebook: Fix deps

  25 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> notebook-9999.ebuild:
  dev-python/notebook: Enable doc useflag

*notebook-4.0.1 (13 Aug 2015)
*notebook-9999 (13 Aug 2015)

  13 Aug 2015; Marius Brehler <marbre@linux.sungazer.de> +metadata.xml,
  +notebook-4.0.1.ebuild, +notebook-9999.ebuild:
  dev-python/notebook: Initial ebuild