@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  02 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> notebook-9999.ebuild:
+  dev-python/notebook: Move setuptools from CDEPEND to DEPEND
+
 *notebook-4.0.1 (01 Sep 2015)
 
   01 Sep 2015; Marius Brehler <marbre@linux.sungazer.de> +notebook-4.0.1.ebuild:
